Fix bug group name overlaps links

--- a/styles.css
+++ b/styles.css
@@ -276,6 +276,8 @@ A:hover {
 /* Links list
 ------------------------------ */
 .list-links {
+  position: relative;
+  z-index: 1;
   display: flex;
   align-items: center;
   margin: 0;
